test/samples/valid/ifStatementNoBlock.ygl
node Foo {
    out {
        int a = 42;
    }
    process {
        if (1 > 2) {
            out.a = 1;
        }
    }
}

node Check : Print;

Foo.out.a -> Check.in.text;
expect:42